name:
  aeson-query
version:
  0.8.0
synopsis:
  An API for parsing "aeson" JSON tree into Haskell types
description:
category:
  Data, JSON, Parsing
homepage:
  https://github.com/nikita-volkov/aeson-query 
bug-reports:
  https://github.com/nikita-volkov/aeson-query/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/aeson-query.git


library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
  exposed-modules:
    Aeson.Query
  build-depends:
    --
    aeson >= 0.8 && < 0.10,
    unordered-containers == 0.2.*,
    vector >= 0.10 && < 0.12,
    scientific == 0.3.*,
    text == 1.*,
    --
    mtl-prelude < 3,
    base-prelude >= 0.1.19 && < 0.2
